--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0-beta.3",
+    "cron": "^1.8.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.4.17",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
