add 'add new project' button and component to admin portfolio

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,17 @@
 {
     "cSpell.words": [
+        "ALLCOMPANY",
+        "ALLLOCATION",
+        "ALLUSERS",
+        "addcompany",
+        "addlocation",
+        "addproject",
+        "addstatus",
+        "adduser",
         "adminpage",
+        "criticalcoordination",
         "forgotpassword",
-        "resetpassword"
+        "resetpassword",
+        "taskstatus"
     ]
 }
